# sermon-archive-wiki

./: .gitignore  AGENTS.md  Install.command  LICENSE  README.md  START_HERE_FOR_AGENTS.md  pyproject.toml
.github/workflows/: tests.yml
docs/: CHURCH_SERMON_ARCHIVIST_INTEGRATION.md  CONFIGURATION.md  EXTERNAL_SUMMARY_COMMAND.md  MAC_INSTALL.md  OPEN_SOURCE_RELEASE.md  REVIEW_WORKFLOW.md  V2_IDEAS.md
examples/: catalog.example.csv  catalog.example.yml  sermon-archive-wiki.example.yml
examples/fixtures/archivist_archive/2026/2026-07-05-ordinary-courage/: metadata.json  transcript.clean.md
examples/fixtures/captions/: 2026-07-12_Patient_Faith.vtt
examples/fixtures/html/: 2026-07-19_Steady_Hope.html
examples/fixtures/transcripts/: 2026-07-05_Ordinary_Courage.txt
examples/fixtures/youtube/: video.json
scripts/: bootstrap_mac.sh  example_summary_command.py
src/sermon_archive_wiki/: __init__.py  captions.py  catalog.py  cli.py  config.py  content_index.py  html_site.py  importers.py  inference.py  models.py  normalization.py  quality.py  reports.py  scripture_index.py  summaries.py  util.py  vault.py  youtube.py
tests/: test_captions.py  test_content_index.py  test_html_site.py  test_importers.py  test_normalization.py  test_reports.py  test_scripture_index.py  test_scripture_inference.py  test_summaries.py  test_vault.py
