[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sermon-archive-wiki"
version = "0.1.0"
description = "Local-first Obsidian-compatible sermon archive wiki builder for churches."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Zach Pippin" }
]
keywords = ["church", "sermon", "markdown", "obsidian", "wiki", "youtube"]
dependencies = [
  "pythonbible>=0.15",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
  "yt-dlp>=2025.1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
sermon-archive-wiki = "sermon_archive_wiki.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
